Fixed requirements.txt file and ReadMe instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pip install tensorflow
-pip install openai
-pip install transformers
-pip install datasets
-pip install tokenizers
-pip install tf-keras
+tensorflow
+transformers
+datasets
+tokenizers
+tf-keras
